--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div id="loading-screen">
-        <img src="mochi.gif" alt="Loading..." class="loading-logo">
+        <img src="t.gif" alt="Loading..." class="loading-logo">
         <div class="loading-bar"></div>
+        <p></p>
     </div>
 
 
