--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <h3>Detected Chords</h3>
                 <p id="detectedChords"></p>
                 <h3>Converted to Nashville Numbers</h3>
-                <p id="convertedChords">1 2 3 i lab u</p>
+                <p id="convertedChords">1 2 3 i lab meow</p>
             </div>
         </div>
         
